--- a/dev/_codinglist/_cl02.pug
+++ b/dev/_codinglist/_cl02.pug
@@ -86,11 +86,53 @@
         [
             "", /* 0. 뎁스1 */
             "", /* 1. 뎁스2 */
+            "유네스코 등재유산", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "culturetv/unescoList.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
             "한국문화100", /* 2. 뎁스3 */
             "", /* 3. 뎁스4 */
             "", /* 4. 뎁스5 */
             "", /* 5. page(ID) */
             "culturetv/culture100List.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
+            "문화인터뷰", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "culturetv/job30List.html", /* 6. path */
+            "", /* 7. 완료일 */
+            "", /* 8. 상태 */
+            [
+                ["", ""],
+            ],
+        ],
+        [
+            "", /* 0. 뎁스1 */
+            "", /* 1. 뎁스2 */
+            "기관별영상", /* 2. 뎁스3 */
+            "", /* 3. 뎁스4 */
+            "", /* 4. 뎁스5 */
+            "", /* 5. page(ID) */
+            "culturetv/publicMovList.html", /* 6. path */
             "", /* 7. 완료일 */
             "", /* 8. 상태 */
             [
