--- a/dev/html/culturetv/job30List.pug
+++ b/dev/html/culturetv/job30List.pug
@@ -15,9 +15,9 @@ block contents
                             li
                                 a(href="#") 문화공감
                             li
-                                a(href="#") 공감마당
+                                a(href="#") 문화TV
                             li
-                                a(href="#") 공감리포트
+                                a(href="#") 문화인터뷰
                     .share-area
                         ul.share-content
                             li
@@ -28,9 +28,9 @@ block contents
                 section.visual-top.line-gray
                     .section-inner
                         .title-area
-                            h1.title-h1 공감리포트
+                            h1.title-h1 문화인터뷰
                                 |
-                                span.txt 최신 문화이슈와 문화현장을 생생하게 전달합니다.
+                                span.txt 문화 각 분야의 특색 있는 직업을 소개합니다.
 
                         .visual-area.type-col.type-slider
                             .swiper-container
@@ -44,9 +44,21 @@ block contents
                                         .visual-text-box
                                             h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
                                             p.sub-txt.ellipsis.type04 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                                            ul.hashtag
+                                                li
+                                                    span.txt # 대구
+                                                li
+                                                    span.txt # 수채화
+                                                li
+                                                    span.txt # 가죽
+                                                li
+                                                    span.txt # 신발
                                             dl.info
-                                                dt 문화포털
-                                                dd 2022-10-10
+                                                dt 제작
+                                                dd 문화포털
+                                            dl.info
+                                                dt 등록일
+                                                dd 2022-09-22
                                     .item.swiper-slide
                                         .visual-content-box
                                             .video
@@ -56,9 +68,23 @@ block contents
                                         .visual-text-box
                                             h3.title-h3 22[문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
                                             p.sub-txt.ellipsis.type04 22[기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
+                                            ul.hashtag
+                                                li
+                                                    span.txt # 국립국악원
+                                                li
+                                                    span.txt # 국립박물관
+                                                li
+                                                    span.txt # 국립아카이브
+                                                li
+                                                    span.txt # 이색전시회
+                                                li
+                                                    span.txt # 서초구이색놀거리
                                             dl.info
-                                                dt 출처
-                                                dd 2022-10-10
+                                                dt 제작
+                                                dd 정육현
+                                            dl.info
+                                                dt 등록일
+                                                dd 2022-09-22
                                 .swiper-button-area
                                     .swiper-button-prev
                                     .swiper-button-next 
@@ -67,23 +93,22 @@ block contents
                 section.section-list
                     .section-inner
                         .area-util
-                            .txt-total 총 <strong>3132</strong>건
+                            .align-box
+                                .txt-total 총 <strong>107</strong>건
+                                .radio-box-wrap
+                                    .radio-box
+                                        input#radio01(type="radio" name="test" checked)
+                                        label.txt-radio(for="radio01")
+                                            span.txt 제목
+                                    .radio-box
+                                        input#radio02(type="radio" name="test")
+                                        label.txt-radio(for="radio02")
+                                            span.txt 제목+내용
+                                    .radio-box
+                                        input#radio03(type="radio" name="test")
+                                        label.txt-radio(for="radio03")
+                                            span.txt 작성자
                             .list-search
-                                .form-box
-                                    select(name="장르") 
-                                        option(value="") 전체
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
-                                .form-box
-                                    select(name="") 
-                                        option(value="") 지역
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
-                                .form-box
-                                    select(name="") 
-                                        option(value="") 7거리
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
                                 .search-input
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
