--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -367,8 +367,8 @@ display: -webkit-box;
 
         & + .txt {
             margin-top: 16px;
-            color:#222;
-            font-weight: bold;
+            // color:#222;
+            // font-weight: bold;
         }
 
         &.mont {
