--- a/dev/html/culturetv/publicMovList.pug
+++ b/dev/html/culturetv/publicMovList.pug
@@ -15,9 +15,9 @@ block contents
                             li
                                 a(href="#") 문화공감
                             li
-                                a(href="#") 공감마당
+                                a(href="#") 문화TV
                             li
-                                a(href="#") 공감리포트
+                                a(href="#") 기관별영상
                     .share-area
                         ul.share-content
                             li
@@ -28,9 +28,9 @@ block contents
                 section.visual-top.line-gray
                     .section-inner
                         .title-area
-                            h1.title-h1 공감리포트
+                            h1.title-h1 기관별영상
                                 |
-                                span.txt 최신 문화이슈와 문화현장을 생생하게 전달합니다.
+                                span.txt 각 기관 및 단체들의 새로운 소식을 영상으로 전합니다.
 
                         .visual-area.type-col.type-slider
                             .swiper-container
@@ -45,8 +45,8 @@ block contents
                                             h3.title-h3 [문화PD] 복잡한 도심 속, 부산포박물관에서 느끼는 소소한 힐링
                                             p.sub-txt.ellipsis.type04 [기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
                                             dl.info
-                                                dt 문화포털
-                                                dd 2022-10-10
+                                                dt 출처
+                                                dd 한국정책방송원
                                     .item.swiper-slide
                                         .visual-content-box
                                             .video
@@ -58,7 +58,7 @@ block contents
                                             p.sub-txt.ellipsis.type04 22[기획 의도] 부산포민속박물관은 무료로 관람이 가능하며, 민속 자료가 한곳에 모여 전시된 곳이라 복잡한 도심 속에서 자그마한 힐링과 전통에 대한 반가움을 느낄 수 있고, 전통공예와 민속놀이 등 전통문화체험 프로그램 교실까지 ...
                                             dl.info
                                                 dt 출처
-                                                dd 2022-10-10
+                                                dd 한국정책방송원
                                 .swiper-button-area
                                     .swiper-button-prev
                                     .swiper-button-next 
@@ -67,23 +67,22 @@ block contents
                 section.section-list
                     .section-inner
                         .area-util
-                            .txt-total 총 <strong>3132</strong>건
+                            .align-box
+                                .txt-total 총 <strong>107</strong>건
+                                .radio-box-wrap
+                                    .radio-box
+                                        input#radio01(type="radio" name="test" checked)
+                                        label.txt-radio(for="radio01")
+                                            span.txt 제목
+                                    .radio-box
+                                        input#radio02(type="radio" name="test")
+                                        label.txt-radio(for="radio02")
+                                            span.txt 제목+내용
+                                    .radio-box
+                                        input#radio03(type="radio" name="test")
+                                        label.txt-radio(for="radio03")
+                                            span.txt 작성자
                             .list-search
-                                .form-box
-                                    select(name="장르") 
-                                        option(value="") 전체
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
-                                .form-box
-                                    select(name="") 
-                                        option(value="") 지역
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
-                                .form-box
-                                    select(name="") 
-                                        option(value="") 7거리
-                                        option(value="") 옵션1
-                                        option(value="") 옵션2
                                 .search-input
                                     input(type="text" placeholder="검색어를 입력하세요.")
                                     button(type="button").btn-search
