--- a/dev/css_partials/prototype.scss
+++ b/dev/css_partials/prototype.scss
@@ -670,6 +670,7 @@ display: -webkit-box;
     }
 }
 
+// 집콕+집밖, 카드뉴스 스와이퍼 pc
 .auto-play-swiper {
     .swiper-slide {
         a {
@@ -678,130 +679,8 @@ display: -webkit-box;
         }
     }
 
-    .box-thumb {
-        position: relative;
-    }
-
-    .thumb-img {
-        display: block;
-        width: 100%;
-    }
-
-    .thumb-category {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-    }
-
-    .thumb-btn {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 48px;
-        border: solid 1px #eee;
-        background-color: #222;
-        text-align: center;
-
-        .txt {
-            font-size: 16px;
-            font-weight: bold;
-            color: #fff;
-        }
-    }
-
-    .box-tag {
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 16px;
-    }
-
-    .tag{
-        display:inline-flex;
-        align-items: center;
-        background-color:#f8f8f8;
-        height: 27px;
-        padding: 0 12px;
-        border-radius: 13.5px;
-        margin-right: 8px;
-
-        &:last-child {
-            margin: 0;
-        }
-
-        .txt{
-            font-size: 13px;
-        }
-
-        &.type01{
-            background-color:#fff;
-            border: solid 1px #222;
-            .txt{color:#222;}
-        }
-    }
-
     .box-thumb .btn-link .txt {
         font-size: 16px;
-    }
-
-    .box-txt {
-        margin-top: 8px;
-
-        .txt-tit {
-            display: block;
-            font-size: 20px;
-            color: #222;
-            line-height: 1.5;
-            margin-bottom: 16px;
-            height: 59px;
-
-            width: 100%;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            word-break: break-word;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical
-        }
-
-        .txt-desc {
-            font-size: 14px;
-            color: #999;
-            line-height: 1.42;
-
-            width: 100%;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            word-break: break-word;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical
-        }
-
-        .txt-data {
-            font-size: 14px;
-            color: #999;
-            line-height: 1.42;
-            
-            display: flex;
-            flex-wrap: wrap;
-
-            .data-term {
-                width: 70px;
-            }
-
-            .data-desc {
-                width: calc(100% - 7rem);
-                margin-bottom: 4px;
-
-                &:last-child {
-                    margin-bottom: 0;
-                }
-            }
-        }
     }
 }
 
@@ -956,6 +835,7 @@ display: -webkit-box;
     }
 
 
+    // 집콕+집밖, 카드뉴스 스와이퍼 mobile
     .auto-play-swiper {
         [class^="ico-"] {
             width: 48px;
@@ -969,26 +849,10 @@ display: -webkit-box;
         .swiper-slide {
             width: 152px;
         }
-    }
 
-    .auto-play-swiper .tag {
-        height: 23px;
-        padding: 8px;
-        margin-right: 4px;
-    }
-    .auto-play-swiper .tag .txt {
-        font-size: 10px;
-    }
-
-    .auto-play-swiper .box-txt .txt-tit {
-        font-size: 16px;
-        height: 48px;
-    }
-    .auto-play-swiper .box-txt .txt-desc {
-        font-size: 12px;
-    }
-    .auto-play-swiper .box-txt .txt-data {
-        font-size: 12px;
+        .box-thumb .tit.size02 {
+            min-height: 48px;
+        }
     }
     
 }
