--- a/dev/html/home/index.pug
+++ b/dev/html/home/index.pug
@@ -52,8 +52,6 @@ block contents
 
                                                 .thumb-txt
                                                     p.tit.size02.ellipsis.type02 20px 지원의 음악과 미술이 함께하는 콘서트 술이 함께하는 콘서트
-                                                    p.txt.size02.ellipsis.type02 14 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 자존감을 얻으며, 자연의  자존감을 얻으며, 자연의
-
                                                     dl.txt-list
                                                         dt.term 기간
                                                         dd.desc 2022.09.21 ~ 2022.09.25
@@ -78,14 +76,8 @@ block contents
 
                                                 .thumb-txt
                                                     p.tit.size02.ellipsis.type02 20px 춤추는 DNA
-                                                    p.txt.size02.ellipsis.type02 14 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 자존감을 얻으며, 자연의  자존감을 얻으며, 자연의
-
-                                                    dl.txt-list
-                                                        dt.term 기간
-                                                        dd.desc 2022.09.21 ~ 2022.09.25
-                                                    dl.txt-list
-                                                        dt.term 문의
-                                                        dd.desc 02-360-866
+                                                    p.txt.size01.mont 2022.09.25
+                                                    
                                         
                                         li.swiper-slide
                                             a(href="#none").box-thumb
@@ -105,7 +97,7 @@ block contents
                                                 .thumb-txt
                                                     p.tit.size02.ellipsis.type02 20px 지원의 음악과 미술이 함께하는 콘서트 술이 함께하는 콘서트
                                                     p.txt.size02.ellipsis.type02 14 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 자존감을 얻으며, 자연의  자존감을 얻으며, 자연의
-
+                                                    p.txt.size02.ellipsis.type02 14 무용의 기본인 신체적 움직임을 통해 자존감을 얻으며, 자연의 자존감을 얻으며, 자연의  자존감을 얻으며, 자연의
                                                     dl.txt-list
                                                         dt.term 기간
                                                         dd.desc 2022.09.21 ~ 2022.09.25
